@@ -1,4 +1,3 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.025
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "B::Hooks::AtRuntime" => "8";
