@@ -15,7 +15,7 @@ features you can use for this. They're turned by the C<includes> flag.
 
     package My::Names {
         use MooseX::Extended types => [qw(compile NonEmptyStr Str )],
-          includes                 => ['method'];
+          includes                 => 'method';
 
         param _name => ( isa => NonEmptyStr, init_arg => 'name' );
         param title => ( isa => Str, required => 0, predicate => 1 );
@@ -45,14 +45,15 @@ You cannot do C<multi method>. You'll have to fall back to C<multi sub>.
 
 =head2 C<multi>
 
-    use MooseX::Extended includes => [qw/multi/];
+    use MooseX::Extended includes => 'multi';
 
     multi sub foo ($self, $x)      { ... }
     multi sub foo ($self, $x, $y ) { ... }
 
 Allows you to redeclare a method (or subroutine) and the dispatch will use the number
 of arguments to determine which subroutine to use. Note that "slurpy" arguments such as
-arrays or hashes will take precedence over scalars:
+arrays or hashes will take precedence over scalars I<if they are declared
+first>:
 
     multi sub foo ($self, @x) { ... }
     multi sub foo ($self, $x) { ... } # will never be called
@@ -60,7 +61,7 @@ arrays or hashes will take precedence over scalars:
 Thus, the following probably doesn't do what you want.
 
     package Foo {
-        use MooseX::Extended includes => [qw/multi/];
+        use MooseX::Extended includes => 'multi';
 
         multi sub foo ($self, @bar) { return '@bar' }
         multi sub foo ($self, $bar) { return '$bar' }
@@ -71,6 +72,13 @@ Thus, the following probably doesn't do what you want.
 
 Both of the above will print the string C<@bar>. The second definition of
 C<foo> is effectively lost.
+
+You must declare slurpy methods last for them to work correctly:
+
+        multi sub foo ($self, $bar) { return '$bar' }
+        multi sub foo ($self, @bar) { return '@bar' }
+
+See L<https://rt.cpan.org/Ticket/Display.html?id=144171> for more information.
 
 Only available on Perl v5.26.0 or higher. Requires L<Syntax::Keyword::MultiSub>.
 
@@ -85,8 +93,8 @@ You cannot do C<multi method>. You'll have to fall back to C<multi sub>.
 
     package My::Thing {
         use MooseX::Extended
-        types    => [qw/Str/],
-        includes => ['async'];
+        types    => 'Str',
+        includes => 'async';
         use IO::Async::Loop;
 
         field output => ( is => 'rw', isa => Str, default => '' );
@@ -108,7 +116,7 @@ Only available on Perl v5.26.0 or higher. Requires L<Future::AsyncAwait>.
 =head2 C<try>
 
     package My::Try {
-        use MooseX::Extended includes => [qw/try/];
+        use MooseX::Extended includes => 'try';
 
         sub reciprocal ( $self, $num ) {
             try {
